# BitTorch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP-3.md  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
benchmark/: __init__.py  bench_packed_inference.py  bench_ternary_kernel_only.py  bench_ternary_linear.py  bench_ternary_vs_linear.py
bittorch/: __init__.py
bittorch/nn/: __init__.py  ternary_linear.py  ternary_linear_cuda.py  ternary_linear_infer.py
bittorch/ops/: __init__.py  ternary_linear.py  ternary_linear_packed.py  ternary_linear_tensor_core.py
bittorch/quant/: __init__.py  base.py  int4.py  ternary.py  ternary_packed.py
bittorch/utils/: __init__.py  convert.py
csrc/bindings/: bittorch_bindings.cpp
csrc/core/: dispatch.cpp
csrc/kernels/: ternary_gemm.cu  ternary_gemm_packed.cu  ternary_gemm_production.cu  ternary_gemm_tensor_core.cu  utils.cuh
docs/: CAPABILITIES.md  kernel_development.md  ternary_format.md
examples/: inference_demo.py  mnist_mlp_ternary.py  tiny_char_lm_ternary.py  xor_mlp.py
js/: package-lock.json  package.json  test_batch.ts  test_correctness.ts  tsconfig.json
js/benchmark/: ternary_matmul_bench.ts  verify_optimized.ts
js/examples/: basic_generation.html
js/src/: index.ts
js/src/core/: Embedding.ts  RMSNorm.ts  RoPE.ts  TernaryLinear.ts  types.ts
js/src/gpu/: WebGPUBackend.ts
js/src/gpu/shaders/: index.ts
js/src/loaders/: SafeTensorsLoader.ts
js/src/models/: TernaryTransformer.ts
js/src/tokenizers/: BPETokenizer.ts
js/tests/: core.test.ts  safetensors.test.ts  ternary_linear.test.ts
tests/: __init__.py  test_amp.py  test_benchmark.py  test_extension.py  test_gradient_consistency.py  test_kernel_regression.py  test_mnist_tiny_regression.py  test_packed_kernel.py  test_packed_ternary.py  test_robustness.py  test_ternary_cuda.py  test_ternary_linear.py  test_ternary_quant.py  test_xor_mlp.py
